# BeatBox-Booking

./: .gitmodules  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: __init__.py
app/src/: main.py
app/src/app/: main.py
nginx/: nginx.conf
src/: main.py
tests/: test_main.py
