[tool.poetry]
name = "TochkaReservation"
version = "0.1.0"
description = "Reservation Service for Tochka"
authors = ["dolbikcop <polyabikka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}

[tool.poetry.group.dev.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
black = "^24.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.black]
line-length = 100
target-version = ['py312']
skip-string-normalization = true
exclude = '''
(
  venv
  | tests
  | pytest_cache
)
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
